# detect_objects_opencv

./: .gitignore  CMakeLists.txt  README.md  drawline1  marker  marker_object.cpp  run_code.sh
include/: marker_object.h
src/: main.cpp  marker_object_implement.cpp
